--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,12 @@ jobs:
       xcode: 14.0.1
     steps:
       - checkout
+      - run: 
+        name: Install CocoaPods
+        command: |
+            gem install cocoapods
+            pod install
       - run: fastlane scan 
-
       #- store_test_results:
        #   path: test_output
       #- store_artifacts:
