--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,11 @@ jobs:
           command: |
             gem install cocoapods
             pod install
-      - run: fastlane scan
+      - run: 
+          name: Fastlane
+          command: |
+            gem install fastlane
+            fastlane scan
 
 workflows:
   sample:
