Feat: Change value of config file for circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       - run: 
           name: Fastlane
           command: |
+            export FASTLANE_XCODEBUILD_SETTINGS_RETRIES=8
+            export FASTLANE_XCODEBUILD_SETTINGS_TIMEOUT=120
             fastlane scan
 
 workflows:
